--- a/static/style.css
+++ b/static/style.css
@@ -122,6 +122,9 @@ nav#guidesbar button#closeguidesbtn {
     margin-top: 0;
     margin-bottom: 1rem;
 }
+#content ul {
+    margin: 0.5rem 0 1rem;
+}
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     margin: 1rem 0 0 0;
     font-weight: 700;
