--- a/static/style.css
+++ b/static/style.css
@@ -196,7 +196,7 @@ nav#guidesbar button#closeguidesbtn {
 #content .vert-margin {
     margin: 1rem 0;
 }
-#content img {
+#content img, #content .video {
     border-radius: 0.25rem;
     box-shadow: 0 0 5px rgb(0 0 0 / 75%);
 }
@@ -217,6 +217,12 @@ nav#guidesbar button#closeguidesbtn {
 #content .tree {
     background-color: #222222;
     padding: 1rem;
+}
+#content .video {
+    border: none;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
 }
 #content .sprite {
     font-weight: 700;
@@ -271,5 +277,8 @@ nav#guidesbar button#closeguidesbtn {
     #content .inline-right {
         margin-left: 1rem;
         float: right;
+    }
+    #content .video {
+        width: 75%;
     }
 }
