Use new background with Elite Warlord title

--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ h1,h2,h3,h4,h5,h6 {
     user-select: none;
 }
 .bg-throne {
-    background-image: url('tthrone.webp');
+    background-image: url('ewthrone.webp');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
