--- a/static/style.css
+++ b/static/style.css
@@ -163,6 +163,10 @@ nav#guidesbar button#closeguidesbtn {
 #content .rotation-list {
     font-size: 1.25rem;
 }
+#content li ul, #content li ol {
+    margin: 0.5rem 0;
+    padding-left: 2rem;
+}
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
     margin: 1rem 0 0.5rem;
     font-weight: 700;
