--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6 {
     z-index: -999;
     width: 100vw;
     height: 100vh;
-    background-image: url('ewthrone.webp');
+    background-image: url('gthrone.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
